--- a/emdr-main-screen.html
+++ b/emdr-main-screen.html
@@ -1982,7 +1982,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> /*end of Main Grid Container*/
     
     <!-- Section 4: Random Controls (Full Width at Bottom) -->
     <div style="margin: 20px; background: rgba(255, 255, 255, 0.05); border-radius: 20px; padding: 25px; border: 1px solid rgba(255, 255, 255, 0.1);">
@@ -3778,7 +3778,7 @@
                         // Update button state manually if already ON
                         if (mainIcon && mainText) {
                             mainIcon.textContent = '⚡';
-                            mainText.textContent = 'Main Controls ON v1.0.1';
+                            mainText.textContent = 'Main Controls ON v1.0.3';
                         }
                     }
                 }, 1000); // Wait 1 second after initial values are sent
@@ -5616,7 +5616,7 @@
                 mainBtn.classList.remove('off');
                 mainBtn.classList.add('on');
                 mainIcon.textContent = '⚡';
-                        mainText.textContent = 'Main Controls ON v1.0.2';
+                        mainText.textContent = 'Main Controls ON v1.0.3';
                         mainIcon.classList.remove('spinner'); // Remove spinner when ON
             } else if (state.connected) {
                 // Connected but controls are OFF
