--- a/emdr-main-screen.html
+++ b/emdr-main-screen.html
@@ -11,12 +11,34 @@
             box-sizing: border-box;
         }
 
+        html {
+            /* Prevent iOS pull-to-refresh */
+            overscroll-behavior: none;
+            -webkit-overflow-scrolling: touch;
+            /* Prevent bounce scrolling */
+            position: fixed;
+            height: 100%;
+            overflow: hidden;
+        }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             background: lightgreen !important;
             min-height: 100vh;
             color: #333;
             overflow-x: hidden;
+            overflow-y: auto;
+            /* Prevent iOS pull-to-refresh */
+            overscroll-behavior: none;
+            -webkit-overflow-scrolling: touch;
+            /* Prevent bounce scrolling */
+            -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
         }
 
         /* Fixed header */
@@ -5497,7 +5519,7 @@
                         mainBtn.classList.remove('off');
                         mainBtn.classList.add('on');
                         mainIcon.textContent = '⚡';
-                        mainText.textContent = 'Main Controls ON v1.0.10';
+                        mainText.textContent = 'Main Controls ON v1.0.11';
                         mainIcon.classList.remove('spinner');
                     } else if (state.connected) {
                         mainBtn.classList.remove('on');
