--- a/emdr-main-screen.html
+++ b/emdr-main-screen.html
@@ -13,7 +13,8 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: lightgreen !important;
+            /*background: lightgreen !important;*/
+            background: linear-gradient(135deg, #000000 0%, #000000 100%) !important; 
             min-height: 100vh;
             color: #333;
             overflow-x: hidden;
